2007-08-13  Federico Mena Quintero  <federico@novell.com>

	* lib/sources/paneldelegate.py (PanelDelegate.__init__): Fix
	"Appliction" typo.  Patch by Baris Cicek
	<baris@teamforce.name.tr>; fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=463177

2007-08-13  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/sabayon-apply: Import our config module.

	* admin-tool/sabayon-session: Likewise.

	* admin-tool/sabayon-apply (main): Start the toplevel "try" block
	right after the call to option_parser.parse_args(); if it exits
	due to being passed --help, we don't want our exception handler to
	be called.  Thanks to Colin Watson <cjwatson@debian.org> for
	catching this.  Fixes http://bugzilla.gnome.org/show_bug.cgi?id=458731

	* admin-tool/sabayon-session (main): Likewise.
	(main): Removed leftover "print" statements for debugging.

2007-08-13  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/sabayon.desktop.in (Icon): Oops, make this just
	"sabayon", not "sabayon.png".

	* lib/userdb.py (UserDatabase.get_users): Clarify the ADS hosts
	comment (they are Active Directory users).

	* admin-tool/sabayon-apply: Import shutil for shutil.rmtree.

	* configure.ac (suse): Update the GNOME session paths for openSUSE 10.3.

2007-08-09  Federico Mena Quintero  <federico@novell.com>

	* data/icons/Makefile.am (install-data-hook uninstall-hook): Run
	gtk-update-icon-cache.  Patch from Christian Kirbach
	<Christian.Kirbach%40googlemail.com>.  Fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=436107

2007-08-06  Federico Mena Quintero  <federico@novell.com>

	* data/icons/*: New, sexy icon files from Alberto Ruiz
	<aruiz@gnome.org> and Andreas Nilsson <andreas@andreasn.se>.

	* configure.ac (AC_CONFIG_FILES): Add the data/icons Makefiles.

	* Makefile.am (SUBDIRS): Add the "data" directory.

	* admin-tool/Makefile.am: Remove the icon installation stuff.

	* admin-tool/sabayon.png: Removed the old icon.  Wheeeee!

==================== 2.19.1 ====================
